# git2wiki

./: .gitignore  LICENSE  README.md  config.example.yaml  git2wiki.py  pyproject.toml
