[tool.poetry]
name = "git2wiki"
version = "0.1.0"
description = ""
authors = ["Helder <he7d3r@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pywikibot = "^11.0.0"
pyexecjs = "^1.5.1"
uglipyjs = "^0.2.5"
pydantic = "^2.12.5"
pyyaml = "^6.0.3"
importlib-metadata = "^8.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
